deployment.yml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {name}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: {name}
  template:
    metadata:
      labels:
        app: {name}
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: {name}
          image: {imagen}
          ports:
            - containerPort: 8080
