route.yml
# route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: your-app
spec:
  to:
    kind: Service
    name: your-app
  port:
    targetPort: 8080
  tls:
    termination: edge
